Fixed overlapping buttons

--- a/listings/style.css
+++ b/listings/style.css
@@ -277,7 +277,7 @@ body{
 #toggle{
     position: absolute;
     margin-top: 25px;
-    margin-left: 1450px;
+    margin-left: 77%;
 }
 #toggleText{
     position: absolute;
